# slim-demo

./: .gitignore  Dockerfile  QUICKSTART.md  README.md  Taskfile.yaml  pyproject.toml  slim-cluster-config.yaml  slim-values.yaml
deployments/: .env.example  coordinator-pod.yaml  guesser-pods.yaml  slim-direct.yaml  thinker-pod.yaml  translator-pod.yaml
scripts/: create-secret.sh
src/guessing_game/: __init__.py  game_coordinator.py  guesser_agent.py  llm_agent.py  logging_config.py  main.py  thinker_agent.py  translator_agent.py
